# nrfx-cmake

./: CMakeLists.txt  LICENSE
